--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ ANALYSIS_josef/
 !ANALYSIS_josef/*.py
 !ANALYSIS_josef/*.ipynb
 
+ANALYSIS/
+!ANALYSIS/*.py
+!ANALYSIS/*.ipynb
+
 # Jupyter tmp files 
 .ipynb_checkpoints
 
